Implement DFA parser and object recreated